# archiviomd-verify

./: .dockerignore  Dockerfile  LICENSE  README.md  archiviomd-verify.html  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: docker.yml  python-publish.yml
src/archiviomd_verify/: __init__.py  cli.py
